new resizeble style of application had been added

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ and open the template in the editor.
 -->
 <html>
     <head>
-        <title>Isolator</title>
+        <title>Spider hunt</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">		
@@ -24,7 +24,7 @@ and open the template in the editor.
 		@viewport { width: 100vw ; zoom: 100% ; }      
 		@-ms-viewport { user-zoom: fixed ; }                    
         @viewport { user-zoom: fixed ; }
-		body{ margin:0; padding:0;}
+		body{ margin:0; padding:0; background-color:#000000;}
         canvas{margin:auto; display:block;
             position: absolute;
             top: 0; left: 0; bottom: 0; right: 0;
