some updates: 1) add start view of the game 2) add sound support and designe sound effects of the game

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@ and open the template in the editor.
             top: 0; left: 0; bottom: 0; right: 0;
         }
   </style>
+		<script src="lib/sound.js"></script>
         <script src="lib/pixi.js"></script>
         <script src="lib/pixi-particles.js"></script>
         <script src="src/ArrayExt.js"></script>
