edit font style

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ and open the template in the editor.
             font-family: "HennyPenny";
             font-style: normal;
             font-weight: 400;
-            src: local("Henny Penny"), url("fonts/HennyPenny.ttf") format("truetype");
+            src: local("Henny Penny"), url("fonts/HennyPenny-webfont.woff") format("woff");
         }
 		@-ms-viewport { width: 100vw ; zoom: 100% ; }                     
 		@viewport { width: 100vw ; zoom: 100% ; }      
